<resources>
    <string name="app_name">RailU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu">메인메뉴</string>

    <string name="bottom_menu_train">열차정보</string>
    <string name="bottom_menu_abbreviation">교통약자</string>
    <string name="bottom_menu_report">민원신고</string>
    <string name="bottom_menu_facilities">편의사설</string>
    <string name="bottom_menu_web">웹사이트</string>

    <string name="drawer_menu_article">유실물</string>
    <string name="drawer_menu_inspection">승강기 점검 정비 현황</string>
    <string name="drawer_menu_notification">공지사항</string>
    <string name="drawer_menu_how">사용방법</string>
    <string name="drawer_menu_certificate">간편지연증명서</string>
    <string name="drawer_menu_settings">환경설정</string>
    <string name="drawer_menu_individual">개인정보 처리방침</string>
    <string name="drawer_menu_utilization">이용약관</string>
    <string name="drawer_menu_location">위치정보 처리방침</string>

    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>